--- a/image-uploader-master/Client/src/App.css
+++ b/image-uploader-master/Client/src/App.css
@@ -73,6 +73,66 @@
   color: #828282;
 }
 
+.uploading {
+  width: 400.36px;
+  height: 143.57px;
+  background: #FFFFFF;
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+  padding-left: 32px;
+  padding-right: 28px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.uploading-title {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+
+  /* identical to box height */
+  letter-spacing: -0.035em;
+
+  /* Gray 2 */
+  color: #4F4F4F;
+}
+
+.loading {
+  background-color: #eee;
+  width: 100%;
+    height: 6px;
+  background: #F2F2F2;
+    border-radius: 8px;
+  position: relative;
+  margin-top: 31px;
+  overflow: hidden;
+}
+
+.loading:after {
+  position: absolute;
+  content: '';
+  left: -30px;
+  width: 100.93px;
+  height: 6px;
+
+  background: #2F80ED;
+  border-radius: 8px;
+  animation: bar2 linear 2s infinite;
+}
+
+@keyframes bar2 {
+  0% {
+    left: -30px;
+  }
+
+  100% {
+    left: 100%;
+  }
+}
 
 .drag-drop-text {
   font-family: 'Poppins';
