--- a/image-uploader-master/Client/src/App.css
+++ b/image-uploader-master/Client/src/App.css
@@ -1,3 +1,30 @@
+.App{
+  position: relative;
+  width: 100%;
+  height: 100%;;
+  
+}
+
+.credit{
+  position: absolute;
+    width: 287px;
+    height: 17px;
+    left: 50%;
+    top: 90%;
+    transform: translate(-50%, -90%);
+  
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+  
+    /* identical to box height */
+    text-align: center;
+  
+    color: #A9A9A9;
+}
+
 .image-uploader-container {
   background: #FFFFFF;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
